Dummy_Package_for_scratch_org/main/default/objects/Artifact_Version__c/fields/Artifact__c.field-meta.xml
<CustomField>
    <fullName>Artifact__c</fullName>
    <label>Package</label>
    <referenceTo>Artifact__c</referenceTo>
    <relationshipLabel>Package Versions</relationshipLabel>
    <relationshipName>Artifact_Versions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>