Dummy_Package_for_scratch_org/main/default/objects/Artifact_Version__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <inlineHelpText>The package version’s branch. Package version content is stored in this branch in the given repository. You may reach your repository information from the parent artifact record.</inlineHelpText>
    <label>Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>