Dummy_Package_for_scratch_org/main/default/objects/Artifact_Version__c/fields/Is_released__c.field-meta.xml
<CustomField>
    <fullName>Is_released__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Package versions are being created as beta and you can promote them to be released. When a version is released this checkbox will be checked.</inlineHelpText>
    <label>Is released</label>
    <type>Checkbox</type>
</CustomField>