Dummy_Package_for_scratch_org/main/default/objects/Artifact_Version__c/fields/Package_Version_Id__c.field-meta.xml
<CustomField>
    <fullName>Package_Version_Id__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Package version id is in use in order to specify ancestry among package versions and for promoting a package version.</inlineHelpText>
    <label>Package Version Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>