Dummy_Package_for_scratch_org/main/default/objects/Artifact_Version__c/fields/Production_Installation_URL__c.field-meta.xml
<CustomField>
    <fullName>Production_Installation_URL__c</fullName>
    <formula>HYPERLINK(&apos;https://login.salesforce.com/packaging/installPackage.apexp?p0=&apos;+Subscriber_Version_Id__c, &apos;https://login.salesforce.com/packaging/installPackage.apexp?p0=&apos;+Subscriber_Version_Id__c, &apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Use this URL in order to install this package in a production environment.</inlineHelpText>
    <label>Production Installation URL</label>
    <type>Text</type>
</CustomField>