Dummy_Package_for_scratch_org/main/default/objects/Artifact_Version__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Release</label>
    <referenceTo>Release__c</referenceTo>
    <relationshipName>Artifact_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>