Dummy_Package_for_scratch_org/main/default/objects/Artifact_Version__c/fields/Release_Status__c.field-meta.xml
<CustomField>
    <fullName>Release_Status__c</fullName>
    <formula>TEXT(Release__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Release Status</label>
    <type>Text</type>
</CustomField>