Dummy_Package_for_scratch_org/main/default/objects/Artifact_Version__c/fields/Subscriber_Version_Id__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_Version_Id__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>In order to install a package to a Salesforce environment, installation URL requires a subscriber Id. Please refer to installation URLs.</inlineHelpText>
    <label>Subscriber Version Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>