Dummy_Package_for_scratch_org/main/default/objects/Artifact_Version__c/fields/Tag__c.field-meta.xml
<CustomField>
    <fullName>Tag__c</fullName>
    <inlineHelpText>The package version’s tag. Package version content is stored in this tag in the given repository. Tags are created for each version number. Version with the same version number may overwrite each other. Try to keep your version numbers unique.</inlineHelpText>
    <label>Tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>