Dummy_Package_for_scratch_org/main/default/objects/Artifact_Version__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <formula>Release__r.Version__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Version</label>
    <type>Text</type>
</CustomField>