Dummy_Package_for_scratch_org/main/default/objects/Artifact_Version__c/fields/Version_Description__c.field-meta.xml
<CustomField>
    <fullName>Version_Description__c</fullName>
    <inlineHelpText>The description of the package version</inlineHelpText>
    <label>Version Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>