Dummy_Package_for_scratch_org/main/default/objects/Artifact_Version__c/fields/Version_Name__c.field-meta.xml
<CustomField>
    <fullName>Version_Name__c</fullName>
    <inlineHelpText>the name of the package version which entered by user while version creation.</inlineHelpText>
    <label>Version Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>