Dummy_Package_for_scratch_org/main/default/objects/Artifact_Version__c/fields/Version_number__c.field-meta.xml
<CustomField>
    <fullName>Version_number__c</fullName>
    <inlineHelpText>The version number of the package version. Must be in major.minor.patch.build format.</inlineHelpText>
    <label>Version number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>