Dummy_Package_for_scratch_org/main/default/objects/Artifact_Version__c/fields/View_In_Git__c.field-meta.xml
<CustomField>
    <fullName>View_In_Git__c</fullName>
    <formula>HYPERLINK(
	IF(
		AND(NOT(ISNULL(Release__r.Project__r.Deployment_Flow__r.Git_Repository__r.Tag_Base_URL__c )), Release__r.Project__r.Deployment_Flow__r.Git_Repository__r.Tag_Base_URL__c != &apos;&apos;),
		IF(
			AND(NOT(ISPICKVAL(Release__r.Project__r.Deployment_Flow__r.Git_Repository__r.Git_Provider__c,&apos;&apos;)),NOT(ISPICKVAL(Release__r.Project__r.Deployment_Flow__r.Git_Repository__r.Git_Provider__c, &apos;Others&apos;))),
			Release__r.Project__r.Deployment_Flow__r.Git_Repository__r.Tag_Base_URL__c +  Version__c,
			IF(
				CONTAINS(Release__r.Project__r.Deployment_Flow__r.Git_Repository__r.Tag_Base_URL__c,&apos;[TAG_NAME]&apos;),
				SUBSTITUTE(Release__r.Project__r.Deployment_Flow__r.Git_Repository__r.Tag_Base_URL__c,&apos;[TAG_NAME]&apos;,Version__c),
				Release__r.Project__r.Deployment_Flow__r.Git_Repository__r.Tag_Base_URL__c + Version__c
			)
		),
	&apos;&apos;), 
	Version__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View In Git</label>
    <type>Text</type>
</CustomField>